# blogdjango

./: .gitignore  pyproject.toml
backend/: .env.samples
backend/author/: models.py
backend/author/migrations/: 0001_initial.py
backend/blog/: models.py
backend/blog/migrations/: 0001_initial.py
backend/config/: settings.py
