[project]
name = "blogdjango"
version = "0.1.0"
description = "Django Blog App"
authors = [
    {name = "usbpendrive",email = "ferry.fernando@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
